# RT-GRU-IIR-filter-on-Android

./: .gitignore  CMakeLists.txt  README.md
benchmark/: density.py  latency.py  retrieve_files.sh  run_bench.sh  utils.py
cmake/: DynamicONNXRuntime.cmake  boost_pfr.cmake  liboboe.cmake  magic_enum.cmake  nlohmann_json.cmake
include/: App.hpp  BasicSessionHandler.hpp  DSPRunner.hpp  GRUBinding.hpp  GRUInference.hpp  IOStreamHandler.hpp  ModelBinding.hpp  ModelTypes.hpp  Player.hpp  SharedAudioBuffer.hpp  acquire_audio_stream.hpp
include/GRUInferenceMethods/: GRUInferenceMethodBase.hpp  GRUOrtInference.hpp  GeneralInferenceParams.hpp  IEParams.hpp  OrtSessionHandler.hpp
include/GRUInferenceMethods/Anira/: AniraGRUInference.hpp
include/GRUInferenceMethods/Ort/: GRUOrtInference.hpp  OrtGRUInference.hpp  OrtSessionHandler.hpp
include/ModelInferenceMethods/: GeneralInferenceParams.hpp  ModelInferenceMethodBase.hpp
include/ModelInferenceMethods/GRUInferenceMethods/Anira/: AniraGRUInference.hpp  PrePostGRUProcessor.hpp
include/ModelInferenceMethods/GRUInferenceMethods/Ort/: OrtGRUInference.hpp
include/ModelInferenceMethods/OrtUtils/: OrtTensorBuffer.hpp
src/: App.cpp  acquire_audio_stream.cpp  main.cpp
